[package]
name = "distributed-key-value-store"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
prometheus = "0.13"
anyhow = "1.0"
tracing = "0.1"
once_cell = "1.0"
thiserror = "1.0"
tower = "0.5"